# nca-pre-pretraining-jax

./: .gitignore  README.md  blog.html  pyproject.toml  quick.sh
scripts/: train_lm.sh  train_nca.sh
scripts/instruction-ft/: ft_instruction_bbl.sh  ft_instruction_gsm8k.sh
src/: checkpointing.py  model.py  train_lm.py  train_nca.py
tests/: test_checkpointing.py
utils/: models.py  nca.py  tokenizers.py
