[project]
name = "nca-pre-pretraining-jax"
version = "0.1.0"
description = "JAX/TPU port of NCA Pre-Pretraining (Lee et al.)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.34",
    "flax>=0.10.0",
    "optax>=0.2.3",
    "orbax-checkpoint>=0.6.0",
    "chex>=0.1.86",
    "einops>=0.8.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "wandb>=0.17",
    "datasets>=2.20",
    "transformers>=4.44",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "tyro>=0.8",
]

[project.optional-dependencies]
tpu = ["jax[tpu]>=0.4.34"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils"]
